Groups of Low Order

--- a/Notes/notes.tex
+++ b/Notes/notes.tex
@@ -20,6 +20,10 @@
 \pagenumbering{roman}
 \tableofcontents
 \newpage
+\listoffigures
+\newpage
+\listoftables
+\newpage
 
 
 
@@ -27,6 +31,8 @@
 \pagestyle{main}
 \renewcommand{\chaptermark}[1]{\markboth{\chaptername\ \thechapter\ (#1)}{}}
 \subfile{Week1/week1.tex}
+
+\subfile{Week2/week2.tex}
 
 
 
