--- a/preamble.tex
+++ b/preamble.tex
@@ -6,6 +6,7 @@
 \usepackage{scrextend}
 \usepackage[bottom]{footmisc}
 \usepackage{siunitx}
+\usepackage{tabu}
 \usepackage{tikz}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{bm,physics,nicematrix}
