Problem Set 2 (Questions)

--- a/PSets/PSet1/pset1.tex
+++ b/PSets/PSet1/pset1.tex
@@ -8,7 +8,7 @@
 
 
 
-\section{Groups as Tools}
+\section{Shuffles and the Orthogonal Group}
 \begin{enumerate}
     \item \marginnote{10/3:}There are two \textbf{riffle shuffles} of a deck of 52 cards obtained as follows: Divide the deck into the top 26 and bottom 26 cards. Then interweave the two decks card by card; there are two different shuffles depending on whether the top card from the top deck ends up on top, or the top card from the bottom deck ends up on top. If we denote the shuffles by $A$ and $B$, respectively, then we saw in class that $A^8=1$ and $B^{52}=1$. Determine whether every permutation of 52 cards can be obtained by some combination of riffle shuffles.
     \begin{proof}
