--- a/PSets/psets.tex
+++ b/PSets/psets.tex
@@ -24,6 +24,9 @@
 \pagestyle{main}
 \renewcommand{\leftmark}{Problem Set \thesection}{}
 \subfile{PSet1/pset1.tex}
+\newpage
+
+\subfile{PSet2/pset2.tex}
 
 
 
