--- a/preamble.tex
+++ b/preamble.tex
@@ -7,7 +7,7 @@
 \usepackage[bottom]{footmisc}
 \usepackage{siunitx}
 \usepackage{tabu}
-\usepackage{tikz}
+\usepackage{tikz,graphicx}
 \usepackage{amsmath,amssymb,amsthm}
 \usepackage{bm,physics,nicematrix}
 \usepackage[hidelinks]{hyperref}
